fixed form visibility for mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3709,6 +3709,7 @@ input, select, textarea {
 			#banner {
 				padding: 2rem 2rem 7rem 2rem ;
 				flex-direction: column;
+				justify-content: start;
 				/* display: block; */
 				margin: 0;
 				min-height: calc(75vh - 4rem);
